[package]
name = "hashcash"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait.workspace = true
clap = { workspace = true, features = ["derive"] }
futures.workspace = true
jsonrpsee = { workspace = true, features = ["server"] }
log.workspace = true
parking_lot.workspace = true
serde_json.workspace = true

frame-benchmarking-cli.workspace = true
frame-system = { workspace = true, features = ["std"] }
pallet-transaction-payment = { workspace = true, features = ["std"] }
pallet-transaction-payment-rpc.workspace = true

sc-basic-authorship.workspace = true
sc-cli.workspace = true
sc-client-api.workspace = true
sc-consensus.workspace = true
sc-consensus-pow.workspace = true
sc-executor.workspace = true
sc-network.workspace = true
sc-offchain.workspace = true
sc-rpc-api.workspace = true
sc-service.workspace = true
sc-telemetry.workspace = true
sc-transaction-pool.workspace = true
sc-transaction-pool-api.workspace = true

sp-api = { workspace = true, features = ["std"] }
sp-block-builder = { workspace = true, features = ["std"] }
sp-blockchain.workspace = true
sp-consensus-pow = { workspace = true, features = ["std"] }
sp-core.workspace = true
sp-inherents = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }
sp-keyring.workspace = true
sp-runtime = { workspace = true, features = ["std"] }
sp-timestamp = { workspace = true, features = ["std"] }

substrate-frame-rpc-system.workspace = true

hashcash-client-consensus.workspace = true
hashcash-client-miner.workspace = true
hashcash-client-rpc.workspace = true
hashcash-primitives = { workspace = true, features = ["std"] }
hashcash-runtime = { workspace = true, features = ["std"] }

[build-dependencies]
substrate-build-script-utils.workspace = true

[features]
runtime-benchmarks = [
  "sc-service/runtime-benchmarks",
]
