[package]
name = "hashcash-primitives"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
repository.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
sp-inherents.workspace = true
sp-runtime.workspace = true
thiserror = { workspace = true, optional = true }

hashcash-primitives-core.workspace = true

[features]
default = ["std"]
std = [
  "hashcash-primitives-core/std",
  "parity-scale-codec/std",
  "scale-info/std",
  "sp-inherents/std",
  "sp-runtime/std",
  "thiserror",
]
