[package]
name = "hashcash-primitives"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
repository.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = { workspace = true, optional = true }
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
serde = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }

sp-inherents.workspace = true
sp-runtime.workspace = true

hashcash-primitives-core.workspace = true

[features]
default = ["std"]
std = [
  "async-trait",
  "hashcash-primitives-core/std",
  "parity-scale-codec/std",
  "scale-info/std",
  "serde",
  "sp-inherents/std",
  "sp-runtime/std",
  "thiserror",
]
