[package]
name = "hashcash-randomx"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
bitflags.workspace = true
hashcash-randomx-sys = { path = "sys" }

[dev-dependencies]
array-bytes.workspace = true
