[package]
name = "hashcash-client-api"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures.workspace = true
hashcash-primitives-core = { workspace = true, features = ["std"] }
parity-scale-codec = { workspace = true, features = ["std", "derive"] }
serde.workspace = true
sc-consensus.workspace = true
sc-consensus-pow.workspace = true
sp-consensus-pow = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }
