[package]
name = "hashcash-client-consensus"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait.workspace = true
futures.workspace = true
hashcash-primitives = { workspace = true, features = ["std"] }
hashcash-randomx.workspace = true
log.workspace = true
parity-scale-codec = { workspace = true, features = ["std"] }
parking_lot.workspace = true
rand.workspace = true
schnellru.workspace = true
sc-client-api.workspace = true
sc-consensus.workspace = true
sc-consensus-pow.workspace = true
sp-api = { workspace = true, features = ["std"] }
sp-consensus.workspace = true
sp-consensus-pow = { workspace = true, features = ["std"] }
sp-core = { workspace = true, features = ["std"] }
sp-inherents = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }
