[package]
name = "hashcash-client-consensus"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait.workspace = true
futures.workspace = true
hashcash-client-api.workspace = true
hashcash-client-randomx.workspace = true
hashcash-primitives = { workspace = true, features = ["std"] }
parity-scale-codec = { workspace = true, features = ["std"] }
rand.workspace = true
sc-client-api.workspace = true
sc-consensus-pow.workspace = true
sp-api = { workspace = true, features = ["std"] }
sp-consensus-pow = { workspace = true, features = ["std"] }
