[package]
name = "hashcash-client-miner-worker"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
hashcash-client-api.workspace = true
hashcash-client-randomx.workspace = true
hashcash-primitives-core = { workspace = true, features = ["std"] }
log = { workspace = true, features = ["std"] }
rand.workspace = true
parity-scale-codec = { workspace = true, features = ["std"] }
