[package]
name = "hashcash-client-miner"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait.workspace = true
hashcash-client-api.workspace = true
hashcash-client-miner-worker.workspace = true
hashcash-primitives = { workspace = true, features = ["std"] }
log.workspace = true
parity-scale-codec = { workspace = true, features = ["std"] }
parking_lot = { workspace = true, features = ["send_guard"] }
sc-client-api.workspace = true
sc-consensus.workspace = true
sc-consensus-pow.workspace = true
serde = { workspace = true, features = ["std"] }
sp-api = { workspace = true, features = ["std"] }
sp-blockchain.workspace = true
sp-consensus.workspace = true
sp-consensus-pow = { workspace = true, features = ["std"] }
sp-inherents.workspace = true
sp-runtime = { workspace = true, features = ["std"] }
thiserror.workspace = true
