[package]
name = "hashcash-client-randomx"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
hashcash-primitives-core = { workspace = true, features = ["std"] }
hashcash-randomx.workspace = true
log.workspace = true
parking_lot.workspace = true
schnellru.workspace = true
