[package]
name = "hashcash-client-rpc"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures.workspace = true
jsonrpsee = { workspace = true, features = ["client-core", "macros", "server"] }
parity-scale-codec = { workspace = true, features = ["std", "derive"] }
thiserror.workspace = true

hashcash-client-miner.workspace = true
hashcash-primitives-core = { workspace = true, features = ["std"] }
