[package]
name = "hashcash-client-utils"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
subxt = { git = "https://github.com/paritytech/subxt", tag = "v0.35.0", optional = true }

[features]
default = ["rpc"]
rpc = ["subxt/unstable-reconnecting-rpc-client"]
