[package]
name = "pallet-coinbase"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-support.workspace = true
frame-system.workspace = true
hashcash-primitives.workspace = true
log.workspace = true
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
sp-inherents.workspace = true
sp-runtime.workspace = true
thiserror = { workspace = true, optional = true }

[features]
default = ["std"]
std = [
  "frame-support/std",
  "frame-system/std",
  "hashcash-primitives/std",
  "log/std",
  "parity-scale-codec/std",
  "scale-info/std",
  "sp-inherents/std",
  "sp-runtime/std",
  "thiserror",
]
try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
  "sp-runtime/try-runtime",
]
