[package]
name = "hashcash-primitives-core"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
repository.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-core.workspace = true
sp-runtime.workspace = true

[features]
default = ["std"]
std = [
  "sp-core/std",
  "sp-runtime/std",
]
